--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -35,6 +35,8 @@ header input {
 .container {
   margin: 0 auto;
   width: 90%;
+  display: flex;
+  justify-content: center;
 }
 button {
   display: block;
